--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ server.port=8765
 #spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.sleuth.sampler.probability=1
